SERVER-42123 Skip dassert check in IndexCatalogImpl::numIndexesTotal() if it throws a WriteConflictException in debug builds